Fix Centering of part 1 Content
Content located in part 1 of the page was not centered. it would move
as the page scaled differently

--- a/style.css
+++ b/style.css
@@ -45,8 +45,13 @@ top: 0;
     display: flex;
     padding: 100px;
     color: #F9FAF8;
-    justify-content: space-between;
+    justify-content: center;
 
+}
+
+.p1-container {
+    display: flex;    
+    justify-content: space-between;
 }
 
 .p1-container-left {
